max width fix 70ch

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <main>
     <section id="classes" class="px-12 py-40">
-      <div class="text-[#04040C] max-w-7xl m-auto [&>p]:text-justify">
+      <div class="text-[#04040C] max-w-[70ch] m-auto">
         <h1 class="text-center font-semibold text-4xl mb-4 md:text-5xl md:mb-8">
           WELCOME TO MYGYM
         </h1>
@@ -28,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
         <br />
         <div>
           <img
-            class="m-auto lg:max-w-4xl"
+            class="m-auto"
             src="/owners.jpg"
             alt="Robert and Claire looking each other, MyGym owners"
           />
@@ -99,7 +99,7 @@ import Layout from "../layouts/Layout.astro";
         <br />
         <div>
           <img
-            class="m-auto lg:max-w-4xl"
+            class="m-auto"
             src="/kid-gym.jpg"
             alt="Robert and Claire looking each other, MyGym owners"
           />
