color and size fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,14 +27,14 @@ import gymClasses from "../mock/gym-classes.json";
               <div class="max-w-xl text-center lg:text-left">
                 <div>
                   <p
-                    class="text-base text-white font-medium relative z-10 tracking-tight sm:text-lg"
+                    class="text-base text-gray-300 font-medium relative z-10 tracking-tight sm:text-lg"
                   >
                     COME AND TRAIN WITH US
                   </p>
                   <img
                     id="claw"
                     src="/claw.svg"
-                    class="absolute rotate-90 -top-48 left-0 opacity-50 w-[95%]"
+                    class="absolute rotate-90 -top-48 left-0 opacity-[.85] w-[95%]"
                     alt="claw"
                   />
                   <p
@@ -43,9 +43,9 @@ import gymClasses from "../mock/gym-classes.json";
                     LET'S GET A FIT AND<br />PERFECT BODY
                   </p>
                 </div>
-                <div class="flex justify-center gap-3 mt-10 lg:justify-start">
+                <div class="flex justify-center gap-3 mt-20 lg:justify-start">
                   <a
-                    class="inline-flex items-center justify-center text-gray-700 text-lg font-semibold relative z-10 rounded-md px-6 py-2 bg-white hover:text-[#D6A22C] focus:outline-none focus-visible:outline-gray-600"
+                    class="inline-flex items-center justify-center text-white text-lg font-semibold relative z-10 rounded-md px-6 py-2 bg-blue-600 hover:text-[#D1A133] hover:bg-white focus:outline-none focus-visible:outline-gray-600"
                     href="/pricing"
                   >
                     <span class="mr-2">JOIN US!</span>
@@ -76,14 +76,14 @@ import gymClasses from "../mock/gym-classes.json";
               </div>
               <div class="relative z-10">
                 <ul
-                  class="flex flex-row justify-center lg:p-0 mt-4 lg:flex-col lg:gap-4"
+                  class="flex flex-row gap-6 justify-center mt-8 lg:p-0 lg:flex-col lg:gap-4"
                 >
                   <li>
                     <a
                       href="#"
-                      class="flex py-2 px-3 transition-all rounded hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
+                      class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
                       ><img
-                        class="h-8 lg-h12"
+                        class="h-full"
                         src="/facebook-logo.svg"
                         alt="facebook logo"
                       /></a
@@ -92,9 +92,9 @@ import gymClasses from "../mock/gym-classes.json";
                   <li>
                     <a
                       href="#"
-                      class="flex py-2 px-3 transition-all rounded hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
+                      class="flex h-12 w-12 transition-[scale] rounded-full overflow-hidden hover:scale-150 lg:hover:bg-transparent lg:border-0 lg:p-0"
                       ><img
-                        class="h-8 lg-h12"
+                        class="h-full"
                         src="/instagram-logo.svg"
                         alt="instagram logo"
                       /></a
