texts and secondary button changed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import gymClasses from "../mock/gym-classes.json";
                 </div>
                 <div class="flex justify-center gap-3 mt-20 lg:justify-start">
                   <a
-                    class="inline-flex items-center justify-center text-white text-lg font-semibold relative z-10 rounded-md px-6 py-2 bg-blue-600 hover:text-[#D1A133] hover:bg-white focus:outline-none focus-visible:outline-gray-600"
+                    class="inline-flex items-center justify-center text-white text-lg font-semibold relative z-10 rounded-md px-6 py-2 bg-[#D1A133] hover:bg-yellow-300 focus:outline-none focus-visible:outline-gray-600"
                     href="/pricing"
                   >
                     <span class="mr-2">JOIN US!</span>
@@ -194,12 +194,14 @@ import gymClasses from "../mock/gym-classes.json";
             ))
           }
         </div>
-        <a
-          href="/all-classes"
-          target="_self"
-          class="flex justify-center font-semibold text-md text-yellow-400"
-          >See more...</a
-        >
+        <div class="flex justify-center">
+          <a
+            href="/all-classes"
+            target="_self"
+            class="-semibold text-md text-yellow-300 px-4 py-3 border border-yellow-300 rounded-lg hover:text-white hover:bg-[#D1A133]"
+            >See more...</a
+          >
+        </div>
       </div>
     </section>
 
@@ -267,7 +269,7 @@ import gymClasses from "../mock/gym-classes.json";
                     clip-rule="evenodd"></path></svg
                 >
                 <span class="text-base font-normal leading-tight"
-                  >Access to all the instruments</span
+                  >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
@@ -347,7 +349,7 @@ import gymClasses from "../mock/gym-classes.json";
                     clip-rule="evenodd"></path></svg
                 >
                 <span class="text-base font-normal leading-tight"
-                  >Access to all the instruments</span
+                  >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
@@ -436,7 +438,7 @@ import gymClasses from "../mock/gym-classes.json";
                     clip-rule="evenodd"></path></svg
                 >
                 <span class="text-base font-normal leading-tight"
-                  >Access to all the instruments</span
+                  >Access to all the equipment</span
                 >
               </li>
               <li class="flex space-x-3">
