fixes for responsive

--- a/src/components/ClassCard.astro
+++ b/src/components/ClassCard.astro
@@ -2,7 +2,7 @@
 const { name, img } = Astro.props;
 ---
 
-<a class="transition-all hover:scale-105" href="/pricing">
+<a class="transition-all hover:scale-105" href="/inscription">
   <div class="w-full aspect-square bg-[#D1A133] rounded-md overflow-hidden">
     <div class="h-5/6">
       <img
@@ -13,7 +13,7 @@ const { name, img } = Astro.props;
     </div>
     <div class="absolute">
       <p
-        class="absolute bg-gradient-to-r from-black to-transparent bottom-4 py-2 px-16"
+        class="absolute bg-gradient-to-r from-black to-transparent bottom-4 py-2 px-10 sm:px-12"
       >
         JOIN
       </p>
