--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,10 +21,19 @@ const { title } = Astro.props;
 			rel="stylesheet"
 		/>
 	</head>
-	<body style="font-family: 'Poppins', sans-serif;">
+	<body>
 		<Header />
 		<slot />
 		<Footer />
 	</body>
 	<script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
 </html>
+
+<style>
+	* {
+		font-family: "Poppins", sans-serif;
+	}
+	:root {
+		font-size: 16px;
+	}
+</style>
