--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -26,7 +26,7 @@ let month = months[date.getMonth() + 1];
     <section class="px-12 pt-32 pb-12 lg:max-w-7xl lg:gap-6 lg:m-auto lg:flex">
       <div class="flex flex-col gap-8 m-auto lg:w-2/3">
         <div>
-          <h3 class="mb-4 font-semibold text-3xl text-gray-900 lg:text-xl">
+          <h3 class="mb-4 font-semibold text-2xl text-gray-900 lg:text-xl">
             Complete your information
           </h3>
           <div class="w-full grid place-items-center">
@@ -35,13 +35,13 @@ let month = months[date.getMonth() + 1];
                 <div class="w-full">
                   <label
                     for="first-name"
-                    class="block mb-2 text-xl font-medium text-gray-900 lg:text-base"
+                    class="block mb-2 text-base font-medium text-gray-900"
                     >First name</label
                   >
                   <input
                     type="text"
                     id="first-name"
-                    class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-xl rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5 lg:text-base"
+                    class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-base rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                     placeholder="Name"
                     required
                   />
@@ -49,13 +49,13 @@ let month = months[date.getMonth() + 1];
                 <div class="w-full">
                   <label
                     for="last-name"
-                    class="block mb-2 text-xl font-medium text-gray-900 lg:text-base"
+                    class="block mb-2 text-base font-medium text-gray-900"
                     >Last name</label
                   >
                   <input
                     type="text"
                     id="last-name"
-                    class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-xl rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5 lg:text-base"
+                    class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-base rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                     placeholder="Last name"
                     required
                   />
@@ -63,25 +63,25 @@ let month = months[date.getMonth() + 1];
               </div>
               <label
                 for="email-address "
-                class="block mb-2 text-xl font-medium text-gray-900 lg:text-base"
+                class="block mb-2 text-base font-medium text-gray-900"
                 >Email</label
               >
               <input
                 type="text"
                 id="email-address"
-                class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-xl rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5 lg:text-base"
+                class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-base rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                 placeholder="name@example.com"
                 required
               />
               <label
                 for="address"
-                class="block mb-2 text-xl font-medium text-gray-900 lg:text-base"
+                class="block mb-2 text-base font-medium text-gray-900"
                 >Address</label
               >
               <input
                 type="text"
                 id="address"
-                class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-xl rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5 lg:text-base"
+                class="bg-gray-50 mb-4 border border-gray-300 text-gray-900 text-base rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
                 placeholder="Example street 123"
                 required
               />
@@ -89,11 +89,11 @@ let month = months[date.getMonth() + 1];
           </div>
         </div>
         <div>
-          <h3 class="mb-4 font-semibold text-xl text-gray-900 lg:text-xl">
+          <h3 class="mb-4 font-semibold text-2xl text-gray-900 lg:text-xl">
             Choose your plan
           </h3>
           <ul
-            class="items-center w-full text-xl font-medium mb-4 text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex lg:text-base"
+            class="items-center w-full text-base font-medium mb-4 text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
           >
             <li
               class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r dark:border-gray-600"
@@ -136,19 +136,19 @@ let month = months[date.getMonth() + 1];
           <div id="enterprise-name" class="w-full hidden">
             <label
               for="enterprise-name"
-              class="block mb-2 font-medium text-xl text-gray-900 lg:text-base"
+              class="block mb-2 font-medium text-base text-gray-900"
               >Your Enterprise*</label
             >
             <input
               type="text"
-              class="bg-gray-50 mb-4 border border-gray-300 text-xl text-gray-900 rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5 lg:text-base"
+              class="bg-gray-50 mb-4 border border-gray-300 text-base text-gray-900 rounded-lg focus:ring-yellow-300 focus:border-yellow-300 block w-full p-2.5"
               placeholder="Enterprise name"
               required
             />
           </div>
 
           <ul
-            class="items-center w-full font-medium text-xl text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex lg:text-base"
+            class="items-center w-full font-medium text-base text-gray-900 bg-white border border-gray-200 rounded-lg sm:flex"
           >
             <li
               class="w-full border-b border-gray-200 sm:border-b-0 sm:border-r"
@@ -211,11 +211,11 @@ let month = months[date.getMonth() + 1];
         </div>
 
         <div>
-          <h3 class="mb-4 font-semibold text-3xl text-gray-900 lg:text-xl">
+          <h3 class="mb-4 font-semibold text-2xl text-gray-900 lg:text-xl">
             Aditional Classes
           </h3>
           <ul
-            class="w-full text-xl font-medium text-gray-900 bg-white border border-gray-200 rounded-lg lg:text-base"
+            class="w-full text-base font-medium text-gray-900 bg-white border border-gray-200 rounded-lg"
           >
             {
               gymClasses.map((gymClass) => (
@@ -241,7 +241,7 @@ let month = months[date.getMonth() + 1];
             }
           </ul>
 
-          <div class="pt-12 pb-32 text-xl flex justify-end">
+          <div class="pt-12 pb-32 text-lg flex justify-end">
             <button
               type="button"
               class="py-3 px-5 items-center w-full bg-sky-600 font-medium text-white border border-gray-200 rounded-lg flex justify-between hover:bg-sky-500 lg:w-auto lg:gap-2 lg:text-base"
@@ -287,7 +287,7 @@ let month = months[date.getMonth() + 1];
     </section>
 
     <section class="px-12 py-8 bg-gray-100 w-screen fixed bottom-0 lg:hidden">
-      <div class="max-w-7xl m-auto text-3xl flex justify-between">
+      <div class="max-w-7xl m-auto text-xl flex justify-between">
         <h3 class="mb-4 font-semibold">Payment</h3>
         <span id="payment" class="font-bold">$0</span>
       </div>
