--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -286,9 +286,9 @@ let month = months[date.getMonth() + 1];
       </div>
     </section>
 
-    <section class="px-12 py-8 bg-gray-100 w-screen fixed bottom-0 lg:hidden">
+    <section class="px-12 py-6 bg-gray-100 w-screen fixed bottom-0 lg:hidden">
       <div class="max-w-7xl m-auto text-xl flex justify-between">
-        <h3 class="mb-4 font-semibold">Payment</h3>
+        <h3 class="font-semibold">Payment</h3>
         <span id="payment" class="font-bold">$0</span>
       </div>
     </section>
