--- a/src/layouts/InscriptionLayout.astro
+++ b/src/layouts/InscriptionLayout.astro
@@ -1,6 +1,3 @@
----
----
-
 <!DOCTYPE html>
 <html class="scroll-smooth" lang="en">
 	<head>
@@ -17,8 +14,8 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body>
-		<section class="px-12 py-8 bg-[#1e1e2c] w-screen fixed top-0">
+	<body style="font-family: Poppins, sans-serif;">
+		<section class="px-12 py-6 bg-[#1e1e2c] w-screen fixed top-0 lg:py-8">
 			<div class="text-white max-w-7xl m-auto flex justify-between">
 				<a href="/">
 					<svg
@@ -50,12 +47,3 @@
 	</body>
 	<script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
 </html>
-
-<style>
-	* {
-		font-family: "Poppins", sans-serif;
-	}
-	:root {
-		font-size: 16px;
-	}
-</style>
