mobile change flex form & padding selectors

--- a/src/pages/inscription.astro
+++ b/src/pages/inscription.astro
@@ -31,7 +31,7 @@ let month = months[date.getMonth() + 1];
           </h3>
           <div class="w-full grid place-items-center">
             <form class="w-full">
-              <div class="lg:flex lg:gap-4">
+              <div class="md:flex md:gap-4">
                 <div class="w-full">
                   <label
                     for="first-name"
@@ -108,7 +108,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="personal-plan-selector"
-                  class="w-full py-4 ml-2 font-medium text-gray-900 dark:text-gray-300"
+                  class="w-full py-4 ml-2 font-medium text-gray-900 dark:text-gray-300 lg:py-3"
                   ><span>Personal</span>
                 </label>
               </div>
@@ -126,7 +126,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="enterprise-plan-selector"
-                  class="w-full py-4 ml-2 font-medium text-gray-900 dark:text-gray-300"
+                  class="w-full py-4 ml-2 font-medium text-gray-900 dark:text-gray-300 lg:py-3"
                   ><span>Enterprise</span></label
                 >
               </div>
@@ -163,7 +163,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="starter-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between"
+                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
                   ><span>Starter</span>
                   <span class="text-gray-500"></span>
                 </label>
@@ -182,7 +182,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="advanced-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between"
+                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
                   ><span>Advanced</span>
                   <span class="text-gray-500"></span></label
                 >
@@ -201,7 +201,7 @@ let month = months[date.getMonth() + 1];
                 />
                 <label
                   for="fitness-plan-selector"
-                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between"
+                  class="w-full py-4 mx-3 font-medium text-gray-900 flex justify-between lg:py-3"
                   ><span>Fitness</span>
                   <span class="text-gray-500"></span></label
                 >
